src/gen/MogicParser.java
// Generated from C:/Users/xsc/IdeaProjects/compiler2016/src\Mogic.g4 by ANTLR 4.5.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MogicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Int_literal=1, IF=2, ELSE=3, FOR=4, WHILE=5, CONTINUE=6, BREAK=7, RETURN=8, 
		NEW=9, CLASS=10, NULL_LITERAL=11, SIZE=12, PRINT=13, PRINTLN=14, GETSTRING=15, 
		GETINT=16, TOSTRING=17, LENGTH=18, SUBSTRING=19, PARSEINT=20, ORD=21, 
		TRUE=22, FALSE=23, String_literal=24, EQ=25, NEQ=26, GT=27, LT=28, GE=29, 
		LE=30, LSHIFT=31, RSHIFT=32, INCREMENT=33, DECREMENT=34, SEMICOLON=35, 
		OPB_FIG=36, CLB_FIG=37, OPB_RND=38, CLB_RND=39, OPB_SQ=40, CLB_SQ=41, 
		DOUBLE_DOT=42, COMMA=43, DOT=44, ETC=45, PLUS=46, MINUS=47, MUL=48, DIV=49, 
		ASSIGN=50, BIT_AND=51, BIT_OR=52, BIT_XOR=53, Tilde=54, AND=55, OR=56, 
		QUESTION=57, REM=58, NOT=59, VOID=60, STRING=61, INT=62, BOOL=63, IDEN=64, 
		WS=65, COMMENT=66;
	public static final int
		RULE_mogic_pro = 0, RULE_program = 1, RULE_class_decl = 2, RULE_member_decl_list = 3, 
		RULE_member_decl = 4, RULE_func_decl = 5, RULE_parameter_list = 6, RULE_type = 7, 
		RULE_dim_SQ = 8, RULE_expr = 9, RULE_logic_or_expr = 10, RULE_logic_and_expr = 11, 
		RULE_inclusive_or_expr = 12, RULE_exclusive_or_expr = 13, RULE_and_expr = 14, 
		RULE_equ_expr = 15, RULE_relational_expr = 16, RULE_shift_expr = 17, RULE_additive_expr = 18, 
		RULE_muly_expr = 19, RULE_unary_expr = 20, RULE_constructor_call = 21, 
		RULE_dim_expr = 22, RULE_arr_arg_suffix = 23, RULE_argument_expr_list = 24, 
		RULE_assignment_expr = 25, RULE_postfix_expr = 26, RULE_unary_operator = 27, 
		RULE_constant = 28, RULE_stmt = 29, RULE_block_stmt = 30, RULE_stmt_list = 31, 
		RULE_expr_stmt = 32, RULE_jump_stmt = 33, RULE_selection_stmt = 34, RULE_iteration_stmt = 35, 
		RULE_expr0 = 36, RULE_expr1 = 37, RULE_var_decl_stmt = 38, RULE_primitive_type = 39, 
		RULE_bool_literal = 40, RULE_equality_operator = 41, RULE_comparsion_operator = 42, 
		RULE_shift_operator = 43, RULE_id = 44;
	public static final String[] ruleNames = {
		"mogic_pro", "program", "class_decl", "member_decl_list", "member_decl", 
		"func_decl", "parameter_list", "type", "dim_SQ", "expr", "logic_or_expr", 
		"logic_and_expr", "inclusive_or_expr", "exclusive_or_expr", "and_expr", 
		"equ_expr", "relational_expr", "shift_expr", "additive_expr", "muly_expr", 
		"unary_expr", "constructor_call", "dim_expr", "arr_arg_suffix", "argument_expr_list", 
		"assignment_expr", "postfix_expr", "unary_operator", "constant", "stmt", 
		"block_stmt", "stmt_list", "expr_stmt", "jump_stmt", "selection_stmt", 
		"iteration_stmt", "expr0", "expr1", "var_decl_stmt", "primitive_type", 
		"bool_literal", "equality_operator", "comparsion_operator", "shift_operator", 
		"id"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'if'", "'else'", "'for'", "'while'", "'continue'", "'break'", 
		"'return'", "'new'", "'class'", "'null'", "'size'", "'print'", "'println'", 
		"'getString'", "'getInt'", "'toString'", "'length'", "'substring'", "'parseInt'", 
		"'ord'", "'true'", "'false'", null, "'=='", "'!='", "'>'", "'<'", "'>='", 
		"'<='", "'<<'", "'>>'", "'++'", "'--'", "';'", "'{'", "'}'", "'('", "')'", 
		"'['", "']'", "':'", "','", "'.'", "'...'", "'+'", "'-'", "'*'", "'/'", 
		"'='", "'&'", "'|'", "'^'", "'~'", "'&&'", "'||'", "'?'", "'%'", "'!'", 
		"'void'", "'string'", "'int'", "'boolean'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Int_literal", "IF", "ELSE", "FOR", "WHILE", "CONTINUE", "BREAK", 
		"RETURN", "NEW", "CLASS", "NULL_LITERAL", "SIZE", "PRINT", "PRINTLN", 
		"GETSTRING", "GETINT", "TOSTRING", "LENGTH", "SUBSTRING", "PARSEINT", 
		"ORD", "TRUE", "FALSE", "String_literal", "EQ", "NEQ", "GT", "LT", "GE", 
		"LE", "LSHIFT", "RSHIFT", "INCREMENT", "DECREMENT", "SEMICOLON", "OPB_FIG", 
		"CLB_FIG", "OPB_RND", "CLB_RND", "OPB_SQ", "CLB_SQ", "DOUBLE_DOT", "COMMA", 
		"DOT", "ETC", "PLUS", "MINUS", "MUL", "DIV", "ASSIGN", "BIT_AND", "BIT_OR", 
		"BIT_XOR", "Tilde", "AND", "OR", "QUESTION", "REM", "NOT", "VOID", "STRING", 
		"INT", "BOOL", "IDEN", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mogic.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MogicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Mogic_proContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public Mogic_proContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mogic_pro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterMogic_pro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitMogic_pro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitMogic_pro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mogic_proContext mogic_pro() throws RecognitionException {
		Mogic_proContext _localctx = new Mogic_proContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mogic_pro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Class_declContext class_decl() {
			return getRuleContext(Class_declContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public Func_declContext func_decl() {
			return getRuleContext(Func_declContext.class,0);
		}
		public Var_decl_stmtContext var_decl_stmt() {
			return getRuleContext(Var_decl_stmtContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				class_decl();
				setState(94);
				_la = _input.LA(1);
				if (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & ((1L << (CLASS - 10)) | (1L << (SIZE - 10)) | (1L << (PRINT - 10)) | (1L << (PRINTLN - 10)) | (1L << (GETSTRING - 10)) | (1L << (GETINT - 10)) | (1L << (TOSTRING - 10)) | (1L << (LENGTH - 10)) | (1L << (SUBSTRING - 10)) | (1L << (PARSEINT - 10)) | (1L << (ORD - 10)) | (1L << (VOID - 10)) | (1L << (STRING - 10)) | (1L << (INT - 10)) | (1L << (BOOL - 10)) | (1L << (IDEN - 10)))) != 0)) {
					{
					setState(93);
					program();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				func_decl();
				setState(98);
				_la = _input.LA(1);
				if (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & ((1L << (CLASS - 10)) | (1L << (SIZE - 10)) | (1L << (PRINT - 10)) | (1L << (PRINTLN - 10)) | (1L << (GETSTRING - 10)) | (1L << (GETINT - 10)) | (1L << (TOSTRING - 10)) | (1L << (LENGTH - 10)) | (1L << (SUBSTRING - 10)) | (1L << (PARSEINT - 10)) | (1L << (ORD - 10)) | (1L << (VOID - 10)) | (1L << (STRING - 10)) | (1L << (INT - 10)) | (1L << (BOOL - 10)) | (1L << (IDEN - 10)))) != 0)) {
					{
					setState(97);
					program();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				var_decl_stmt();
				setState(102);
				_la = _input.LA(1);
				if (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & ((1L << (CLASS - 10)) | (1L << (SIZE - 10)) | (1L << (PRINT - 10)) | (1L << (PRINTLN - 10)) | (1L << (GETSTRING - 10)) | (1L << (GETINT - 10)) | (1L << (TOSTRING - 10)) | (1L << (LENGTH - 10)) | (1L << (SUBSTRING - 10)) | (1L << (PARSEINT - 10)) | (1L << (ORD - 10)) | (1L << (VOID - 10)) | (1L << (STRING - 10)) | (1L << (INT - 10)) | (1L << (BOOL - 10)) | (1L << (IDEN - 10)))) != 0)) {
					{
					setState(101);
					program();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(MogicParser.CLASS, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode OPB_FIG() { return getToken(MogicParser.OPB_FIG, 0); }
		public Member_decl_listContext member_decl_list() {
			return getRuleContext(Member_decl_listContext.class,0);
		}
		public TerminalNode CLB_FIG() { return getToken(MogicParser.CLB_FIG, 0); }
		public Class_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterClass_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitClass_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitClass_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_declContext class_decl() throws RecognitionException {
		Class_declContext _localctx = new Class_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(CLASS);
			setState(107);
			id();
			setState(108);
			match(OPB_FIG);
			setState(109);
			member_decl_list();
			setState(110);
			match(CLB_FIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Member_decl_listContext extends ParserRuleContext {
		public List<Member_declContext> member_decl() {
			return getRuleContexts(Member_declContext.class);
		}
		public Member_declContext member_decl(int i) {
			return getRuleContext(Member_declContext.class,i);
		}
		public Member_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member_decl_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterMember_decl_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitMember_decl_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitMember_decl_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Member_decl_listContext member_decl_list() throws RecognitionException {
		Member_decl_listContext _localctx = new Member_decl_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_member_decl_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				member_decl();
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 12)) & ~0x3f) == 0 && ((1L << (_la - 12)) & ((1L << (SIZE - 12)) | (1L << (PRINT - 12)) | (1L << (PRINTLN - 12)) | (1L << (GETSTRING - 12)) | (1L << (GETINT - 12)) | (1L << (TOSTRING - 12)) | (1L << (LENGTH - 12)) | (1L << (SUBSTRING - 12)) | (1L << (PARSEINT - 12)) | (1L << (ORD - 12)) | (1L << (VOID - 12)) | (1L << (STRING - 12)) | (1L << (INT - 12)) | (1L << (BOOL - 12)) | (1L << (IDEN - 12)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Member_declContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(MogicParser.SEMICOLON, 0); }
		public Member_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterMember_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitMember_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitMember_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Member_declContext member_decl() throws RecognitionException {
		Member_declContext _localctx = new Member_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_member_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			type();
			setState(118);
			id();
			setState(119);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode OPB_RND() { return getToken(MogicParser.OPB_RND, 0); }
		public TerminalNode CLB_RND() { return getToken(MogicParser.CLB_RND, 0); }
		public Block_stmtContext block_stmt() {
			return getRuleContext(Block_stmtContext.class,0);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Func_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterFunc_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitFunc_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitFunc_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_declContext func_decl() throws RecognitionException {
		Func_declContext _localctx = new Func_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			type();
			setState(122);
			id();
			setState(123);
			match(OPB_RND);
			setState(125);
			_la = _input.LA(1);
			if (((((_la - 12)) & ~0x3f) == 0 && ((1L << (_la - 12)) & ((1L << (SIZE - 12)) | (1L << (PRINT - 12)) | (1L << (PRINTLN - 12)) | (1L << (GETSTRING - 12)) | (1L << (GETINT - 12)) | (1L << (TOSTRING - 12)) | (1L << (LENGTH - 12)) | (1L << (SUBSTRING - 12)) | (1L << (PARSEINT - 12)) | (1L << (ORD - 12)) | (1L << (VOID - 12)) | (1L << (STRING - 12)) | (1L << (INT - 12)) | (1L << (BOOL - 12)) | (1L << (IDEN - 12)))) != 0)) {
				{
				setState(124);
				parameter_list();
				}
			}

			setState(127);
			match(CLB_RND);
			setState(128);
			block_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_listContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(MogicParser.COMMA, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterParameter_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitParameter_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitParameter_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameter_listContext parameter_list() throws RecognitionException {
		Parameter_listContext _localctx = new Parameter_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameter_list);
		try {
			setState(138);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				type();
				setState(131);
				id();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				type();
				setState(134);
				id();
				setState(135);
				match(COMMA);
				setState(136);
				parameter_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public List<Dim_SQContext> dim_SQ() {
			return getRuleContexts(Dim_SQContext.class);
		}
		public Dim_SQContext dim_SQ(int i) {
			return getRuleContext(Dim_SQContext.class,i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MogicListener ) ((MogicListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MogicVisitor ) return ((MogicVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			primitive_type();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OPB_SQ) {
				{
				{
				setState(141);
				dim_SQ();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
